# learncmake

./: .cproject  .project  README.md
01-config-file/: CMakeLists.txt  main.cpp
02-add-library/: CMakeLists.txt  config.h.in  main.cpp
02-add-library/mysum/: CMakeLists.txt  mysum.cpp  mysum.h
03-install-test/: CMakeLists.txt
03-install-test/mysum/: CMakeLists.txt
